refactor: Implement framework UI management and new APIs
- Add generic command runner API with root support.
- Refactor extensions to use the new API.
- Add collapsible headers and reordering settings for extensions.
- Scaffold new extensions and update all documentation.

--- a/app/extensions/shortcut_wizard/template.html
+++ b/app/extensions/shortcut_wizard/template.html
@@ -1,6 +1,6 @@
 <!-- Extension Template: Shortcut Wizard -->
 <div class="section-header">
-    <h2 class="section-title">Shortcut Wizard</h2>
+    <!-- Title is provided by the framework -->
 </div>
 
 <!-- Initial Menu View -->
