--- a/app/apps/distro/template.html
+++ b/app/apps/distro/template.html
@@ -1,19 +1,23 @@
 <div class="distro-app">
   <header class="distro-header">
     <h1 class="distro-title">Distro Manager</h1>
-    <div class="distro-actions-bar"><button class="distro-btn" id="distro-add">Add Container</button><button class="distro-btn" id="distro-refresh">Refresh</button></div>
+    <div class="distro-actions-bar">
+      <button class="distro-btn" id="distro-add">Add Container</button>
+      <button class="distro-btn" id="distro-refresh">Refresh</button>
+    </div>
   </header>
 
   <section class="distro-content">
     <div id="distro-empty" class="distro-empty">No containers configured yet.</div>
     <div id="distro-cards" class="distro-cards"></div>
   </section>
+</div>
 
 <div id="distro-import-modal" class="distro-modal hidden">
   <div class="distro-modal-body">
     <header class="distro-modal-header">
       <h2>Add Container</h2>
-      <button id="distro-import-close" class="distro-modal-close">&times;</button>
+      <button id="distro-import-close" class="distro-modal-close" aria-label="Close">&times;</button>
     </header>
     <form id="distro-import-form" class="distro-form">
       <label class="distro-field">
@@ -36,7 +40,7 @@
         <input type="text" id="distro-import-chroot-path" placeholder="~/chroot/rootfs" />
       </label>
       <fieldset class="distro-field">
-        <legend>Mount</legend>
+        <legend>Mount (optional)</legend>
         <label>
           <span>Device (e.g., /dev/block/mmcblk1p1)</span>
           <input type="text" id="distro-import-device" placeholder="/dev/block/mmcblk1p1" />
@@ -68,9 +72,19 @@
   <div class="distro-modal-body">
     <header class="distro-modal-header">
       <h2 id="distro-logs-title">Logs</h2>
-      <button id="distro-logs-close" class="distro-modal-close">&times;</button>
+      <button id="distro-logs-close" class="distro-modal-close" aria-label="Close">&times;</button>
     </header>
     <pre id="distro-logs-output" class="distro-logs-output"></pre>
+  </div>
+</div>
+
+<div id="distro-attach-modal" class="distro-modal hidden">
+  <div class="distro-modal-body">
+    <header class="distro-modal-header">
+      <h2>Select Session</h2>
+      <button id="distro-attach-close" class="distro-modal-close" aria-label="Close">&times;</button>
+    </header>
+    <div id="distro-attach-list" class="distro-attach-list"></div>
   </div>
 </div>
 
@@ -78,17 +92,29 @@
   .distro-app { padding: 16px; color: var(--foreground); }
   .distro-header { display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px; }
   .distro-title { margin: 0; font-size: 1.6rem; font-weight: 600; }
-  .distro-refresh { border: 1px solid var(--border); background: var(--secondary); color: inherit; padding: 6px 12px; border-radius: 8px; cursor: pointer; }
-  .distro-refresh:hover { border-color: var(--primary); }
+  .distro-actions-bar { display: flex; gap: 8px; }
   .distro-content { display: flex; flex-direction: column; gap: 16px; }
   .distro-empty { padding: 24px; border: 1px dashed var(--border); border-radius: 8px; text-align: center; color: var(--muted-foreground); }
-  .distro-cards { display: grid; gap: 16px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); }
-  .distro-card { border: 1px solid var(--border); border-radius: 12px; background: var(--card); padding: 16px; display: flex; flex-direction: column; gap: 12px; }
+  .distro-cards { display: grid; gap: 16px; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); }
+  .distro-card { border: 1px solid var(--border); border-radius: 12px; background: var(--card); padding: 16px; display: flex; flex-direction: column; gap: 12px; position: relative; }
+  .distro-card-header { display: flex; justify-content: space-between; align-items: center; }
   .distro-card h3 { margin: 0; font-size: 1.2rem; }
   .distro-meta { display: flex; flex-direction: column; gap: 4px; font-size: 0.85rem; color: var(--muted-foreground); }
-  .distro-actions { display: flex; flex-wrap: wrap; gap: 8px; }
-  .distro-btn { border: 1px solid var(--border); background: var(--secondary); color: inherit; padding: 6px 10px; border-radius: 8px; cursor: pointer; font-size: 0.9rem; }
+  .distro-meta-key { color: var(--muted-foreground); margin-right: 6px; text-transform: uppercase; font-size: 0.75rem; letter-spacing: 0.05em; }
+  .distro-primary-row { display: flex; justify-content: space-between; align-items: center; gap: 8px; }
+
+  .distro-btn { border: 1px solid var(--border); background: var(--secondary); color: inherit; padding: 6px 12px; border-radius: 8px; cursor: pointer; font-size: 0.9rem; }
+  .distro-btn:hover { border-color: var(--primary); }
   .distro-btn.primary { background: var(--primary); color: var(--primary-foreground); border: none; }
+
+  .distro-menu-wrapper { position: relative; }
+  .distro-menu-btn { border: 1px solid var(--border); background: var(--secondary); color: inherit; padding: 6px 10px; border-radius: 8px; cursor: pointer; font-size: 1.2rem; line-height: 1; }
+  .distro-menu { position: absolute; top: 42px; right: 0; background: var(--card); border: 1px solid var(--border); border-radius: 8px; box-shadow: 0 12px 32px rgba(0,0,0,0.35); display: none; flex-direction: column; min-width: 180px; z-index: 100; }
+  .distro-menu.open { display: flex; }
+  .distro-menu-item { display: flex; align-items: center; justify-content: flex-start; gap: 8px; padding: 10px 14px; background: none; border: none; color: inherit; font-size: 0.9rem; cursor: pointer; text-align: left; }
+  .distro-menu-item:hover { background: rgba(255,255,255,0.08); }
+  .distro-menu-item.destructive { color: var(--destructive); }
+
   .distro-state { display: inline-flex; align-items: center; gap: 6px; font-size: 0.85rem; padding: 4px 8px; border-radius: 999px; background: rgba(255,255,255,0.08); width: fit-content; }
   .distro-state-dot { width: 8px; height: 8px; border-radius: 50%; }
   .distro-state-offline { background: #777; }
@@ -96,10 +122,36 @@
   .distro-state-running { background: #68d391; }
   .distro-state-error { background: #f56565; }
 
-  .distro-modal { position: fixed; inset: 0; background: rgba(0,0,0,0.65); display: flex; align-items: center; justify-content: center; z-index: 1200; }
+  .distro-attachments { border: 1px solid var(--border); border-radius: 10px; padding: 12px; background: rgba(255,255,255,0.02); display: flex; flex-direction: column; gap: 8px; }
+  .distro-attachments-header { display: flex; justify-content: space-between; align-items: center; font-weight: 600; font-size: 0.9rem; }
+  .distro-attachments-empty { font-size: 0.85rem; color: var(--muted-foreground); }
+  .distro-attachment { display: flex; justify-content: space-between; align-items: center; gap: 12px; padding: 8px 10px; border: 1px solid var(--border); border-radius: 8px; background: var(--secondary); }
+  .distro-attachment-title { font-weight: 600; font-size: 0.9rem; }
+  .distro-attachment-meta { font-size: 0.8rem; color: var(--muted-foreground); }
+  .distro-attachment-detach { border: none; background: none; color: var(--primary); cursor: pointer; font-size: 0.85rem; }
+  .distro-attachment-detach:hover { text-decoration: underline; }
+
+  .distro-modal { position: fixed; inset: 0; background: rgba(0,0,0,0.65); display: flex; align-items: center; justify-content: center; z-index: 2000; }
   .distro-modal.hidden { display: none; }
   .distro-modal-body { width: min(700px, 90vw); max-height: 80vh; background: var(--card); border: 1px solid var(--border); border-radius: 12px; display: flex; flex-direction: column; }
   .distro-modal-header { display: flex; justify-content: space-between; align-items: center; padding: 12px 16px; border-bottom: 1px solid var(--border); }
   .distro-modal-close { background: none; border: none; color: inherit; font-size: 1.6rem; cursor: pointer; }
   .distro-logs-output { margin: 0; padding: 16px; background: rgba(0,0,0,0.35); color: var(--foreground); font-family: 'JetBrains Mono', monospace; overflow: auto; white-space: pre-wrap; }
+
+  .distro-form { display: flex; flex-direction: column; gap: 12px; padding: 16px; }
+  .distro-field { display: flex; flex-direction: column; gap: 6px; font-size: 0.9rem; }
+  .distro-field input { width: 100%; padding: 8px; border-radius: 6px; border: 1px solid var(--border); background: var(--background); color: inherit; }
+  .distro-field-row { display: flex; gap: 8px; }
+  .distro-field-row input { flex: 1; }
+  fieldset.distro-field { border: 1px solid var(--border); border-radius: 8px; padding: 12px; }
+  fieldset.distro-field legend { padding: 0 6px; color: var(--muted-foreground); font-size: 0.75rem; text-transform: uppercase; }
+  .distro-field-check { display: flex; align-items: center; gap: 8px; font-size: 0.9rem; }
+  .distro-form-actions { display: flex; gap: 8px; justify-content: flex-end; }
+
+  .distro-attach-list { display: flex; flex-direction: column; padding: 12px; gap: 8px; }
+  .distro-attach-item { display: flex; flex-direction: column; align-items: flex-start; gap: 2px; padding: 10px 14px; border-radius: 8px; border: 1px solid var(--border); background: var(--secondary); color: inherit; cursor: pointer; text-align: left; }
+  .distro-attach-item:hover { border-color: var(--primary); }
+  .distro-attach-title { font-weight: 600; font-size: 0.95rem; }
+  .distro-attach-sub { font-size: 0.8rem; color: var(--muted-foreground); }
+  .distro-attach-empty { padding: 12px; text-align: center; color: var(--muted-foreground); }
 </style>
