--- a/app/apps/distro/template.html
+++ b/app/apps/distro/template.html
@@ -123,6 +123,13 @@
   .distro-state-error { background: #f56565; }
 
   .distro-attachments { border: 1px solid var(--border); border-radius: 10px; padding: 12px; background: rgba(255,255,255,0.02); display: flex; flex-direction: column; gap: 8px; }
+  .distro-available { border: 1px solid var(--border); border-radius: 10px; padding: 12px; background: rgba(255,255,255,0.02); display: flex; flex-direction: column; gap: 8px; }
+  .distro-available-header { font-weight: 600; font-size: 0.9rem; }
+  .distro-available-empty { font-size: 0.85rem; color: var(--muted-foreground); }
+  .distro-available-item { display: flex; flex-direction: column; align-items: flex-start; gap: 2px; padding: 8px 12px; border: 1px solid var(--border); border-radius: 8px; background: var(--secondary); color: inherit; cursor: pointer; }
+  .distro-available-item:hover { border-color: var(--primary); }
+  .distro-available-title { font-weight: 600; font-size: 0.9rem; }
+  .distro-available-meta { font-size: 0.8rem; color: var(--muted-foreground); }
   .distro-attachments-header { display: flex; justify-content: space-between; align-items: center; font-weight: 600; font-size: 0.9rem; }
   .distro-attachments-empty { font-size: 0.85rem; color: var(--muted-foreground); }
   .distro-attachment { display: flex; justify-content: space-between; align-items: center; gap: 12px; padding: 8px 10px; border: 1px solid var(--border); border-radius: 8px; background: var(--secondary); }
