termux-lm: document chat workflow and rename fixes

--- a/app/apps/termux_lm/template.html
+++ b/app/apps/termux_lm/template.html
@@ -122,6 +122,14 @@
             <span>API Base URL</span>
             <input name="endpoint" type="url" placeholder="https://" autocomplete="off">
           </label>
+          <label class="tlm-field">
+            <span>Model Identifier</span>
+            <input name="remote_model" type="text" placeholder="gpt-4.1-mini" autocomplete="off">
+          </label>
+          <label class="tlm-field">
+            <span>Reasoning Effort</span>
+            <input name="reasoning_effort" type="number" min="0" step="1" placeholder="0">
+          </label>
         </section>
       </div>
       <footer>
